--- a/edugateway/src/main/resources/application.properties
+++ b/edugateway/src/main/resources/application.properties
@@ -3,3 +3,11 @@ spring.datasource.url=jdbc:postgresql://ep-spring-cake-a164r5zb.ap-southeast-1.a
 # spring.datasource.password=JEoc69tSbgGN
 # spring.datasource.driver-class-name=org.postgresql.Driver
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=EdugateWay_owner
+spring.datasource.password=JEoc69tSbgGN
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
