--- a/FrontEnd/Advance App Development/package.json
+++ b/FrontEnd/Advance App Development/package.json
@@ -14,6 +14,7 @@
 		"@heroicons/react": "^2.1.1",
 		"@material-tailwind/react": "^2.1.9",
 		"axios": "^1.6.8",
+		"flowbite-react": "^0.9.0",
 		"heroicons": "^2.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
