--- a/FrontEnd/Advance App Development/package.json
+++ b/FrontEnd/Advance App Development/package.json
@@ -16,6 +16,7 @@
 		"axios": "^1.6.8",
 		"flowbite-react": "^0.9.0",
 		"heroicons": "^2.1.1",
+		"lodash": "^4.17.21",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.22.3"
